@@ -1,3 +1,18 @@
+[peak.config.iniFile.sectionParsers]
+
+# This section defines how special '[section name]' sections will be parsed.
+# If a section name contains inner spaces, it is looked up here by lowercasing
+# it, and converting contiguous whitespace to '.'.  The returned object or
+# function must implement config.ISettingParser.  This essentially makes .ini
+# syntax extensible, at least with regard to how the contents of name=value
+# pairs are interpreted.  Later in the file, we'll see uses of each of the
+# following section headers.
+
+load.settings.from = "peak.config.config_components.do_include"
+provide.utilities  = "peak.config.config_components.provide_utility"
+load.on.demand     = "peak.config.config_components.on_demand"
+
+
 [peak.config.loaders]
 
 # This section defines the types of data that can be used in
@@ -8,6 +23,18 @@
 file    = "peak.config.config_components:loadConfigFile"
 files   = "peak.config.config_components:loadConfigFiles"
 mapping = "peak.config.config_components:loadMapping"
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -33,6 +60,20 @@ peak.running.cluster.* =
         config.getProperty(propertyMap, '__main__.CLUSTER', default=None),
         ruleName, propertyName,
     )
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
